--- a/first.html
+++ b/first.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="https://cdn.britannica.com/49/182849-050-4C7FE34F/scene-Iron-Man.jpg">
     <title>Portfolio</title>
     <style>
         *{
